# python_2023

./: .gitignore  README.md  concat.py  metadata_map.csv  metadata_map_rep.csv  pyproject.toml  title_sim_list.py  trimming.py
2d_som/: map_to_index.py  select_rep.py  som.py  torus_som.py
2d_som/result_map/: index_to_number.py  map_index_number.csv  (+5 more)
3d_som/: Interactive-1.ipynb  geodesic_dome.py  image_som_result20230110_073816.csv  rep_image_som_result_3-3.csv  spherical_som.py  torus.py  visualize.py
BERT/: bert_feature.py  bert_test.py  bert_word.py
ViT/: PCA.py  ResNet_feature_extraction.py  ViT_feature_extraction.py  ViT_feature_extraction_HF.py  cluster_evaluate.py  clustering.py  t-sne.py  umap.py
Word2Vec/: title_wakati_fugashi.txt  title_wakati_ipa.txt  title_wakati_neologd.txt  title_wakati_sudachi_A.txt  title_wakati_sudachi_B.txt  title_wakati_sudachi_C.txt  w2v_test.py  wakati_juman.py
clustering/: clustering_test.ipynb
scraping/: _metadata_2026.csv  img_link.csv  metadata.csv  metadata_2026.csv  number_float.py  numbers.csv  numbers_float.csv  numbers_parsefloat.csv  raw_metadata_2026.csv  scraping_image.py  scraping_link.py  scraping_meta.py  scraping_number.py  split_metadata.csv  test_metadata_2026.csv
som/: geocentric_catesiazn_coordinates.py  geodesicDome.py  spherical_som.py  spherical_surface_SOM.py  torus.py  torus_som.py  visualize.py
tmp/: checkImages.py  scraping.py  test.py  title.csv  title_number.csv
wakati/: wakati_fugashi.py  wakati_mecab.py  wakati_sudachi.py
word2vec/: jawiki_sim.py  stacktest.py
(+14 files in other folders)
