[tool.poetry]
name = "python-2023"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
pandas = "^2.1.2"
opencv-python = "^4.8.1.78"
matplotlib = "^3.8.1"
numpy = "^1.26.1"
notebook = "^7.0.6"
ipykernel = "^6.26.0"
plotly = "^5.18.0"
squarify = "^0.4.3"
gensim = "^4.3.2"
mecab-python3 = "^1.0.8"
jupyter = "^1.0.0"
scipy = "^1.11.4"
pytk = "^0.0.2.1"
japanize-matplotlib = "^1.1.3"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
